# codex-platform

./: .gitignore  .prettierignore  .prettierrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  pyproject.toml  recommended-prettierignore.txt
.codex/: REVIEW_WORKFLOW.md
.codex/references/roles/: code-architect.md  code-explorer.md  code-reviewer.md  comment-analyzer.md  pr-test-analyzer.md  security-reviewer.md  silent-failure-hunter.md  type-design-analyzer.md
.codex/skills/actions-usage-audit/: SKILL.md
.codex/skills/agent-loop/: SKILL.md  agent-loop-instructions.md.template  agent-loop.config.template  prompt.txt.template
.codex/skills/agent-loop/scripts/: agent-loop.sh
.codex/skills/backlog-refinement/: LEARNINGS.md.template  RUBRIC.md.template  SKILL.md
.codex/skills/backlog-refinement/scripts/: bail-report.py  candidates.py
.codex/skills/copilot-review/: SKILL.md
.codex/skills/deepgrill/: SKILL.md
.codex/skills/feature-dev/: SKILL.md
.codex/skills/grill/: SKILL.md
.codex/skills/issues/: SKILL.md
.codex/skills/issues/scripts/: link.py  ready.py
.codex/skills/phone-install/: SKILL.md
.codex/skills/pr-grill/: SKILL.md
.codex/skills/refactorpass/: SKILL.md
.codex/skills/reviewit/: SKILL.md
.codex/skills/ship-staging/: SKILL.md
.codex/skills/task-packet/: SKILL.md
.github/: CODEOWNERS  copilot-instructions.md.template  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  gemini-review.yml  sync-from-upstream.yml.template
codex/: github-api-usage.md
docs/: getting-started.md  sync.md
scripts/: check-action-pin-drift.sh  create-signed-commit.py  install-skills.sh  sync-engine.py  sync-targets.yml
tests/: conftest.py  test_agent_loop.py  test_backlog_refinement.py  test_create_signed_commit.py  test_ready.py  test_skill_surface.py  test_sync_engine.py  test_sync_engine_integration.py
